<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Photos</string>

    <string name="welcome_message">My Photo Albums</string>
    <string name="new_album_name">Enter album name</string>
    <string name="create_album">Create</string>
    <string name="search_photos">Search Photos</string>

    <string name="album_name_placeholder">Album Name</string>
    <string name="add_photo">Add Photo</string>
    <string name="back_to_albums">Back to Albums</string>
    <string name="delete_album">Delete</string>
    <string name="rename_album">Rename</string>

    <string name="album_actions">Album Actions</string>
    <string name="menu_icon">⋮</string>

    <string name="photo_description">Photo</string>
    <string name="photo_caption_placeholder">Photo Caption</string>
    <string name="tags">Tags:</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag_value">Tag Value</string>
    <string name="add_tag">Add Tag</string>
    <string name="slideshow">Slideshow</string>
    <string name="move_photo">Move Photo</string>
    <string name="back">Back</string>
    <string name="delete_tag">Delete</string>

    <string name="slideshow_title">Slideshow</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="exit_slideshow">Exit</string>

    <string name="search_photos_title">Search Photos</string>
    <string name="single_tag">Single Tag</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
    <string name="first_tag">First Tag</string>
    <string name="second_tag">Second Tag</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="search_results">Search Results:</string>

    <string-array name="tag_types">
        <item>person</item>
        <item>location</item>
    </string-array>

    <string name="dialog_delete_album_title">Delete Album</string>
    <string name="dialog_delete_album_message">Are you sure you want to delete this album?</string>
    <string name="dialog_rename_album_title">Rename Album</string>
    <string name="dialog_rename_album_message">Enter new album name:</string>
    <string name="dialog_delete_photo_title">Delete Photo</string>
    <string name="dialog_delete_photo_message">Are you sure you want to delete this photo?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- New strings that need to be added -->
    <string name="delete_photo">Delete Photo</string>
    <string name="open">Open</string>
    <string name="search_result">Search Result</string>
    <string name="create_album_from_results">Create Album</string>
    <string name="album_created">Album created successfully</string>
    <string name="photo_added">Photo added successfully</string>
    <string name="photo_moved">Photo moved successfully</string>
    <string name="error_album_name_exists">An album with this name already exists</string>
</resources>